...
        searchBar.placeholder = "Search"
        searchBar.sizeToFit()
        searchBar.isTranslucent = false
        
        // accessibilty label is required for testing
        searchBar.isAccessibilityElement = true
        searchBar.accessibilityIdentifier = "search-bar"

        // delegate
        searchBar.delegate = self
        
        // Constraints.swift is a helper file to quickly bind constraints for an element
        searchBar.anchor(top: self.view.safeAreaLayoutGuide.topAnchor, left: self.view.leftAnchor, bottom: nil, right: self.view.rightAnchor, topConstant: 0, leftConstant: 0, bottomConstant: 0, rightConstant: 0, widthConstant: 0, heightConstant: 50)
...
       
    func loadTableView(){
        view.addSubview(listTableView)
        
        // accessibilty label is required for testing
        listTableView.isAccessibilityElement = true
        listTableView.accessibilityIdentifier = "list-table"
        
        // register delegate / datasource
        listTableView.delegate = self
        listTableView.dataSource = self
        
        // register cells
...
