...
        
        stackView.leftAnchor.constraint(equalTo: previewImage.rightAnchor, constant: 8).isActive = true
        stackView.rightAnchor.constraint(equalTo: self.rightAnchor, constant: 4).isActive = true
        stackView.anchorCenterYToSuperview()
        // accessibility
        nameLabel.isAccessibilityElement = true
        nameLabel.accessibilityIdentifier = "list-cell-label"
    }

    //MARK: UPDATE
    var album: Album! {
        didSet {
            self.updateUI()
...
