...

  func download(searchTerm: String, completion: @escaping QueryResult) {

    dataTask?.cancel()

    // construct a url from string to be queried
    if var urlComponents = URLComponents(string: "https://itunes.apple.com/search") {
        
      urlComponents.query = "media=music&entity=song&term=\(searchTerm)"

      guard let url = urlComponents.url else {
        return
      }
...
